--- a/views/passport/login.hbs
+++ b/views/passport/login.hbs
@@ -1,4 +1,4 @@
-<div>
+{{!-- <div>
   <form method="POST" class="w-75 mx-auto mt-5" id="login" action="/login">
     <div class="row justify-content-center text-center">
       <div class="col-md-7 col-12">
@@ -19,4 +19,22 @@
       <button type="submit" class="btn btn-success btn-lg">Register</button>
     </div>
   </form>
+</div> --}}
+<div class="login-page">
+  <div class="form">
+    <form method="POST" class="login-form">
+      {{!-- <form method="POST" class="login-form" action="/login"> --}}
+      <div>
+        <label for="exampleInputEmail1"></label>
+        <input type="email" id="exampleImputEmail1" aria-describedby="emailHelp" placeholder="username" required="true"
+          name="username">
+      </div>
+      <div>
+        <label for="password"></label>
+        <input type="password" id="password" placeholder="password" required="true" name="password" />
+      </div>
+      <button type="submit">login</button>
+      <p class="message">Not registered? <a href="/register">Create an account</a></p>
+    </form>
+  </div>
 </div>
