--- a/views/passport/register.hbs
+++ b/views/passport/register.hbs
@@ -24,15 +24,15 @@
       </div>
       <div>
         <label for="exampleInputEmail1"></label>
-        <input type="email" id="exampleImputEmail1" aria-describedby="emailHelp" placeholder="username" required="true"
+        <input type="email" id="exampleImputEmail1" aria-describedby="emailHelp" placeholder="Username" required="true"
           name="username">
       </div>
       <div>
         <label for="password"></label>
-        <input type="password" id="password" placeholder="password" required="true" name="password" />
+        <input type="password" id="password" placeholder="Password" required="true" name="assword" />
       </div>
       <button type="submit">register</button>
-      <p class="message">Al ready register?<a href="/login">Go to login</a></p>
+      <p class="message">Already register?<a href="/login">Go to login</a></p>
     </form>
   </div>
 </div>
