Test register not working

--- a/views/passport/login.hbs
+++ b/views/passport/login.hbs
@@ -26,12 +26,12 @@
       {{!-- <form method="POST" class="login-form" action="/login"> --}}
       <div>
         <label for="exampleInputEmail1"></label>
-        <input type="email" id="exampleImputEmail1" aria-describedby="emailHelp" placeholder="username" required="true"
+        <input type="email" id="exampleImputEmail1" aria-describedby="emailHelp" placeholder="Username" required="true"
           name="username">
       </div>
       <div>
         <label for="password"></label>
-        <input type="password" id="password" placeholder="password" required="true" name="password" />
+        <input type="password" id="password" placeholder="Password" required="true" name="password" />
       </div>
       <button type="submit">login</button>
       <p class="message">Not registered? <a href="/register">Create an account</a></p>
