--- a/views/passport/register.hbs
+++ b/views/passport/register.hbs
@@ -8,7 +8,7 @@
       </div>
       <div>
         <label for="lastName"></label>
-        <input type="text" id="lastName" placeholder="Last Name" required="true" name="Lastname">
+        <input type="text" id="lastName" placeholder="Last Name" required="true" name="lastname">
       </div>
       <div>
         <label for="address"></label>
@@ -29,9 +29,9 @@
       </div>
       <div>
         <label for="password"></label>
-        <input type="password" id="password" placeholder="Password" required="true" name="assword" />
+        <input type="password" id="password" placeholder="Password" required="true" name="password" />
       </div>
-      <button type="submit">register</button>
+      <button type="submit">Register</button>
       <p class="message">Already register?<a href="/login">Go to login</a></p>
     </form>
   </div>
