Test register not working

--- a/views/passport/register.hbs
+++ b/views/passport/register.hbs
@@ -8,7 +8,7 @@
       </div>
       <div>
         <label for="lastName"></label>
-        <input type="text" id="lastName" placeholder="Last Name" required="true" name="lastname">
+        <input type="text" id="lastName" placeholder="Last Name" required="true" name="lastName">
       </div>
       <div>
         <label for="address"></label>
@@ -20,7 +20,7 @@
       </div>
       <div>
         <label for="zip"></label>
-        <input type="text" id="zip" placeholder="Zip Code" required="true" name="zip">
+        <input type="number" id="zip" placeholder="Zip Code" required="true" name="zip">
       </div>
       <div>
         <label for="exampleInputEmail1"></label>
