--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -29,6 +29,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/register">Register</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/about">About</a>
+      </li>
       {{/if}}
       {{!-- {{#if user}}
       <li class="nav-item">
