--- a/views/passport/favourites.hbs
+++ b/views/passport/favourites.hbs
@@ -1,8 +1,8 @@
 <h2>List Favourites clean point</h2>
-{{#with user}}
-<ul>
-  <li>
-    <ul></ul>
-  </li>
+{{!-- {{#with user}} --}}
+{{#each cpoint}}
+<p>Hola</p>
+<h5>{{this.type}}</h5>>
 </ul>
-{{/with}}
+{{/each}}
+{{!-- {{/with}} --}}
