--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,7 +10,7 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="/stylesheets/style.css" />
   <link href='https://api.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.css' rel='stylesheet' />
-
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
 
 
@@ -35,7 +35,7 @@
   <script src="/javascripts/script.js"></script>
   <script src="/javascripts/mapbox.js"></script>
   <script src="/javascripts/geolocation.js"></script>
-  <script src="/javascripts/app.js"></script>
+  <script src="/javascripts/index.js"></script>
 
 
 </body>
