--- a/views/passport/info.hbs
+++ b/views/passport/info.hbs
@@ -1,14 +1,19 @@
-<h2>Change your Info</h2>
+<div class="title-info ">
+  <h2>Change your Info</h2>
+</div>
 {{#with user}}
-<form method="POST" action="/info/{{this._id}}">
-  <p>Name</p>
-  <input type="text" class="form-control form-control-lg" value="{{this.name}}" name="name">
-  <p>Last Name</p>
-  <input type="text" class="form-control form-control-lg" value="{{this.lastName}}" name="lastName">
-  <p>Address</p>
-  <input type="text" class="form-control form-control-lg" value="{{this.address}}" name="address">
-  <p>Password</p>
-  <input type="password" class="form-control form-control-lg" value="{{this.password}}" required="true" name="password">
-  <button type="submit" class="btn btn-success button2">Update</button>
-</form>
+<div class="form">
+  <form method="POST" action="/info/{{this._id}}">
+    <h5>Name</h5>
+    <input type="text" class="form-control form-control-lg" value="{{this.name}}" name="name">
+    <h5>Last Name</h5>
+    <input type="text" class="form-control form-control-lg" value="{{this.lastName}}" name="lastName">
+    <h5>Address</h5>
+    <input type="text" class="form-control form-control-lg" value="{{this.address}}" name="address">
+    <h5>Password</h5>
+    <input type="password" class="form-control form-control-lg" value="{{this.password}}" required="true"
+      name="password">
+    <button type="submit" class="btn btn-success button2">Update</button>
+  </form>
+</div>
 {{/with}}
