--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,9 +4,7 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   background: #76b852;
   /* fallback for old browsers */
-  font-family: "Roboto", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; }
+  font-family: "Roboto", sans-serif; }
 
 li {
   list-style: none; }
