--- a/views/passport/page-personal.hbs
+++ b/views/passport/page-personal.hbs
@@ -1,1 +1,4 @@
-<h2>Welcome {{user.name}}</h2>
+<div class="title-info ">
+  <h2>Welcome {{user.name}}</h2>
+</div>
+<img style="width:100%; height:100%;" src="../images/info.jpg" />
