--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">ThrowMyTrash!</a>
+  <a class="navbar-brand" href="/"><b>Throw My Trash!!</b></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -9,7 +9,7 @@
       {{#if user}}
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-          aria-expanded="false">{{user.name}}</a>
+          aria-expanded="false"><b>{{user.name}}</b></a>
         <div class="dropdown-menu">
           <a class="dropdown-item" href="/page-personal">Profile</a>
           <a class="dropdown-item" href="/favourites">Favourites</a>
@@ -18,8 +18,8 @@
           <a class="dropdown-item" href="/logout">Logout</a>
         </div>
       </li>
+      {{else}}
       <li class="nav-item">
-        {{else}}
         <a class="nav-link" href="/login">Login</a>
       </li>
       <li class="nav-item">
