--- a/views/passport/register.hbs
+++ b/views/passport/register.hbs
@@ -1,38 +1,41 @@
-<div class="login-page">
-  <div class="form">
-    <form method="POST" class="login-form">
-      {{!-- <form method="POST" class="login-form" action="/login"> --}}
-      <div>
-        <label for="firstName"></label>
-        <input type="text" id="firstName" placeholder="First Name" required="true" name="name">
-      </div>
-      <div>
-        <label for="lastName"></label>
-        <input type="text" id="lastName" placeholder="Last Name" required="true" name="lastName">
-      </div>
-      <div>
-        <label for="address"></label>
-        <input type="text" id="address" placeholder="Address" required="true" name="address">
-      </div>
-      <div>
-        <label for="city"></label>
-        <input type="text" id="city" placeholder="City" required="true" name="city">
-      </div>
-      <div>
-        <label for="zip"></label>
-        <input type="number" id="zip" placeholder="Zip Code" required="true" name="zip">
-      </div>
-      <div>
-        <label for="exampleInputEmail1"></label>
-        <input type="email" id="exampleImputEmail1" aria-describedby="emailHelp" placeholder="Username" required="true"
-          name="username">
-      </div>
-      <div>
-        <label for="password"></label>
-        <input type="password" id="password" placeholder="Password" required="true" name="password" />
-      </div>
-      <button type="submit">Register</button>
-      <p class="message">Already register?<a href="/login">Go to login</a></p>
-    </form>
+<div>
+  <img style=" position:absolute; width:100%; height:100%;" src="../images/info.jpg" />
+  <div class="login-page">
+    <div class="form">
+      <form method="POST" class="login-form">
+        {{!-- <form method="POST" class="login-form" action="/login"> --}}
+        <div>
+          <label for="firstName"></label>
+          <input type="text" id="firstName" placeholder="First Name" required="true" name="name">
+        </div>
+        <div>
+          <label for="lastName"></label>
+          <input type="text" id="lastName" placeholder="Last Name" required="true" name="lastName">
+        </div>
+        <div>
+          <label for="address"></label>
+          <input type="text" id="address" placeholder="Address" required="true" name="address">
+        </div>
+        <div>
+          <label for="city"></label>
+          <input type="text" id="city" placeholder="City" required="true" name="city">
+        </div>
+        <div>
+          <label for="zip"></label>
+          <input type="number" id="zip" placeholder="Zip Code" required="true" name="zip">
+        </div>
+        <div>
+          <label for="exampleInputEmail1"></label>
+          <input type="email" id="exampleImputEmail1" aria-describedby="emailHelp" placeholder="Username"
+            required="true" name="username">
+        </div>
+        <div>
+          <label for="password"></label>
+          <input type="password" id="password" placeholder="Password" required="true" name="password" />
+        </div>
+        <button type="submit">Register</button>
+        <p class="message">Already register?<a href="/login">Go to login</a></p>
+      </form>
+    </div>
   </div>
 </div>
