New CRUD in reservate formulary

--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -13,6 +13,7 @@
         <div class="dropdown-menu">
           <a class="dropdown-item" href="/page-personal">Profile</a>
           <a class="dropdown-item" href="/favourites">Favourites</a>
+          <a class="dropdown-item" href="/reservates">Reservates</a>
           <a class="dropdown-item" href="/info">Change info</a>
           <div role="separator" class="dropdown-divider"></div>
           <a class="dropdown-item" href="/logout">Logout</a>
