--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -37,7 +37,9 @@
   <script src="/javascripts/script.js"></script>
   <script src="/javascripts/mapbox.js"></script>
   <script src="/javascripts/geolocation.js"></script>
+  <script src="/javascripts/today.js"></script>
   <script src="/javascripts/index.js"></script>
+
 
 
 </body>
