--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -123,4 +123,67 @@ h5 {
   right: 0;
   left: unset; }
 
+.box {
+  margin-top: 5%;
+  width: 25%;
+  background-color: white;
+  margin-left: 10%;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24); }
+
+.topOfReservates {
+  padding: 1%;
+  margin-top: 2%;
+  background-color: white;
+  width: 80%;
+  margin-left: 10%;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24); }
+
+.titleOfReservates {
+  padding: 2%;
+  margin-top: 10%;
+  display: flex;
+  justify-content: center; }
+
+.elementOfReservates {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-right: 0px;
+  margin-left: 0px;
+  padding: 10px; }
+
+.formOfReservate {
+  z-index: 1;
+  background: #ffffff;
+  max-width: 360px;
+  padding: 45px;
+  margin-left: 70%;
+  text-align: center;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24); }
+
+.formOfReservate input {
+  font-family: "Roboto", sans-serif;
+  outline: 0;
+  background: #f2f2f2;
+  width: 100%;
+  border: 0;
+  margin: 0 0 15px;
+  padding: 15px;
+  box-sizing: border-box;
+  font-size: 17px; }
+
+.formOfReservate button {
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  outline: 0;
+  background: #4caf50;
+  width: 100%;
+  border: 0;
+  padding: 15px;
+  color: #ffffff;
+  font-size: 17px;
+  -webkit-transition: all 0.3 ease;
+  transition: all 0.3 ease;
+  cursor: pointer; }
+
 /*# sourceMappingURL=style.css.map */
