--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:300);
 body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   background: #76b852; /* fallback for old browsers */
@@ -17,8 +18,6 @@ a {
 p {
   font-size: larger;
 }
-
-@import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
 .login-page {
   width: 360px;
@@ -135,4 +134,71 @@ h5 {
 .dropdown-menu {
   right: 0;
   left: unset;
+}
+
+.box {
+  margin-top: 5%;
+  width: 25%;
+  background-color: white;
+  margin-left: 10%;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+.topOfReservates {
+  padding: 1%;
+  margin-top: 2%;
+  background-color: white;
+  width: 80%;
+  margin-left: 10%;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+
+.titleOfReservates {
+  padding: 2%;
+  margin-top: 10%;
+  display: flex;
+  justify-content: center;
+}
+
+.elementOfReservates {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-right: 0px;
+  margin-left: 0px;
+  padding: 10px;
+}
+
+.formOfReservate {
+  z-index: 1;
+  background: #ffffff;
+  max-width: 360px;
+  padding: 45px;
+  margin-left: 70%;
+  text-align: center;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+.formOfReservate input {
+  font-family: "Roboto", sans-serif;
+  outline: 0;
+  background: #f2f2f2;
+  width: 100%;
+  border: 0;
+  margin: 0 0 15px;
+  padding: 15px;
+  box-sizing: border-box;
+  font-size: 17px;
+}
+.formOfReservate button {
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  outline: 0;
+  background: #4caf50;
+  width: 100%;
+  border: 0;
+  padding: 15px;
+  color: #ffffff;
+  font-size: 17px;
+  -webkit-transition: all 0.3 ease;
+  transition: all 0.3 ease;
+  cursor: pointer;
 }
