--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,26 @@
-<p>Welcome to {{title}}</p>
+{{!-- <p>Welcome to {{title}}</p> --}}
 
-<div id="map" style="height:800px"></div>
+{{!-- IF NO USER
+<div id="map" style="height:800px"></div> --}}
+{{!-- IF USER --}}
+<div class="loading">
+  <div class="lds-roller">
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
+</div>
+<div class="wrapper">
+  <div class='sidebar'>
+    <div class='heading'>
+      <h1>Our locations</h1>
+    </div>
+    <div id='listings' class='listings'></div>
+  </div>
+  <div id='map' class='map2'></div>
+</div>
