--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -380,10 +380,11 @@ a:hover {
 
 .mapboxgl-popup-anchor-top > .mapboxgl-popup-tip {
   border-bottom-color: #91c949;
-.form-control {
-  display: unset;
-  width: 50%;
-  margin-left: 25%;
+  .form-control {
+    display: unset;
+    width: 50%;
+    margin-left: 25%;
+  }
 }
 
 .title-info {
@@ -441,10 +442,8 @@ h5 {
 }
 
 .box {
-  margin-top: 5%;
   width: 25%;
   background-color: white;
-  margin-left: 10%;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 .topOfReservates {
@@ -477,7 +476,6 @@ h5 {
   background: #ffffff;
   max-width: 360px;
   padding: 45px;
-  margin-left: 70%;
   text-align: center;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
@@ -505,4 +503,18 @@ h5 {
   -webkit-transition: all 0.3 ease;
   transition: all 0.3 ease;
   cursor: pointer;
+}
+
+.searchNav {
+  display: flex;
+  margin-left: 5%;
+  width: 90%;
+}
+
+.prueba {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  width: 80%;
+  margin: 3% auto;
 }
