--- a/views/passport/favourites.hbs
+++ b/views/passport/favourites.hbs
@@ -2,11 +2,13 @@
   <div class="title-info">
     <h2>This are the current favourites</h2>
   </div>
-  <div class="wrap">
+  <div>
     <form method="POST" action="/favourites">
-      <input name="search" id="search" class="form-control mr-sm-8" type="text" placeholder="Search for your district"
-        aria-label="Search" required="true">
-      <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
+      <div class="searchNav">
+        <input name="search" id="search" class="form-control mr-sm-8" type="text" placeholder="Search for your district"
+          aria-label="Search" required="true">
+        <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
+      </div>
     </form>
   </div>
 
