--- a/views/passport/reservates.hbs
+++ b/views/passport/reservates.hbs
@@ -14,7 +14,7 @@
       </ul>
     </div>
   </div>
-  <div>
+  <div class="prueba">
     <div class="box">
       {{#if dates}}
       <div class="titleOfReservates">
@@ -35,7 +35,7 @@
       {{/if}}
     </div>
 
-    <div>
+    <div class="prueba2">
       <div class="formOfReservate">
         <div class="title-info">
           <h2><b>Make your pickup</b></h2>
