--- a/views/index.hbs
+++ b/views/index.hbs
@@ -22,5 +22,5 @@
     </div>
     <div id='listings' class='listings'></div>
   </div>
-  <div id='map' class='map2'></div>
+  <div id='mapcpoints' class='map2'></div>
 </div>
