--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -160,6 +160,13 @@ a:hover {
   background: #00853e;
   border-radius: 0; }
 
+.marker {
+  border: none;
+  cursor: pointer;
+  height: 56px;
+  width: 56px;
+  background-color: rgba(0, 0, 0, 0); }
+
 .clearfix {
   display: block; }
 
@@ -284,6 +291,9 @@ a:hover {
     transform: rotate(360deg); } }
 
 /* Marker tweaks */
+.mapboxgl-popup {
+  padding-bottom: 50px; }
+
 .mapboxgl-popup-close-button {
   display: none; }
 
@@ -308,7 +318,7 @@ a:hover {
 .mapboxgl-popup-content h4 {
   margin: 0;
   display: block;
-  padding: 10px;
+  padding: 10px 10px 10px 10px;
   font-weight: 400; }
 
 .mapboxgl-popup-content div {
@@ -322,10 +332,12 @@ a:hover {
 
 .mapboxgl-popup-anchor-top > .mapboxgl-popup-tip {
   border-bottom-color: #91c949; }
-  .mapboxgl-popup-anchor-top > .mapboxgl-popup-tip .form-control {
-    display: unset;
-    width: 50%;
-    margin-left: 25%; }
+
+h3 {
+  font-size: 1rem; }
+
+h4 {
+  font-size: 0.7rem; }
 
 .title-info {
   text-align: center;
