--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -184,6 +184,15 @@ a:hover {
   border-radius: 0;
 }
 
+.marker {
+  border: none;
+  cursor: pointer;
+  height: 56px;
+  width: 56px;
+  // background-image: url(marker.png);
+  background-color: rgba(0, 0, 0, 0);
+}
+
 .clearfix {
   display: block;
 }
@@ -334,20 +343,21 @@ a:hover {
 }
 
 /* Marker tweaks */
+.mapboxgl-popup {
+  padding-bottom: 50px;
+}
+
 .mapboxgl-popup-close-button {
   display: none;
 }
-
 .mapboxgl-popup-content {
   font: 400 15px/22px "Source Sans Pro", "Helvetica Neue", Sans-serif;
   padding: 0;
   width: 180px;
 }
-
 .mapboxgl-popup-content-wrapper {
   padding: 1%;
 }
-
 .mapboxgl-popup-content h3 {
   background: #91c949;
   color: #fff;
@@ -362,7 +372,7 @@ a:hover {
 .mapboxgl-popup-content h4 {
   margin: 0;
   display: block;
-  padding: 10px;
+  padding: 10px 10px 10px 10px;
   font-weight: 400;
 }
 
@@ -380,12 +390,16 @@ a:hover {
 
 .mapboxgl-popup-anchor-top > .mapboxgl-popup-tip {
   border-bottom-color: #91c949;
-  .form-control {
-    display: unset;
-    width: 50%;
-    margin-left: 25%;
-  }
 }
+
+h3 {
+  font-size: 1rem;
+}
+
+h4 {
+  font-size: 0.7rem;
+}
+
 .title-info {
   text-align: center;
   margin: 15px;
