--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -40,12 +40,9 @@
   <script src="/javascripts/script.js"></script>
   <script src="/javascripts/mapbox.js"></script>
   <script src="/javascripts/geolocation.js"></script>
-  {{!-- <script src="/javascripts/index-nouser.js"></script> --}}
-  <script src="/javascripts/index-user.js"></script>
+  {{!-- <script src="/javascripts/maptrash.js"></script> --}}
+  <script src="/javascripts/mapcpoints.js"></script>
   <script src="/javascripts/today.js"></script>
-
-
-
 </body>
 
 </html>
