--- a/views/passport/page-personal.hbs
+++ b/views/passport/page-personal.hbs
@@ -1,3 +1,25 @@
-<div class="title-info ">
-  <h2>Welcome {{user.name}}</h2>
+<div>
+  <div class="title-info ">
+    <h2>Welcome {{user.name}}</h2>
+  </div>
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Special title treatment</h5>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <a href="/page-personal/prueba" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Special title treatment</h5>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
