--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -511,7 +511,7 @@ h5 {
   width: 90%;
 }
 
-.prueba {
+.listReservates {
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
