--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -439,7 +439,7 @@ h5 {
   margin-left: 5%;
   width: 90%; }
 
-.prueba {
+.listReservates {
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
