--- a/views/passport/reservates.hbs
+++ b/views/passport/reservates.hbs
@@ -1,4 +1,5 @@
 <div>
+  {{!-- <img style=" position:absolute ;width:100%; height:125%;" src="../images/reservates.jpg" /> --}}
   <div class="topOfReservates">
     <div class="title-info ">
       <h2><b> Collection Requirements</b></h2>
@@ -66,7 +67,7 @@
               {{/each}}
             </datalist>
           </div>
-          <button type="submit">Add reservate</button>
+          <button type="submit">Add reservation</button>
         </form>
       </div>
     </div>
