--- a/views/passport/page-personal.hbs
+++ b/views/passport/page-personal.hbs
@@ -6,18 +6,28 @@
     <div class="col-sm-6">
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="/page-personal/prueba" class="btn btn-primary">Go somewhere</a>
+          <a href="/page-personal/battery" class="btn btn-primary">Batteries</a>
         </div>
       </div>
     </div>
     <div class="col-sm-6">
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a href="/page-personal/clothes" class="btn btn-primary">Clothes</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="card">
+        <div class="card-body">
+          <a href="/page-personal/vegetalOil" class="btn btn-primary">Vegetal Oil</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="card">
+        <div class="card-body">
+          <a href="/page-personal/cleanPoints" class="btn btn-primary">Clean Points</a>
         </div>
       </div>
     </div>
