new models and seeds

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -134,7 +134,7 @@ a:hover {
 
 .listings .item .title {
   display: block;
-  color: #00853e;
+  color: #424242;
   font-weight: 700; }
 
 .listings .item .title small {
@@ -142,7 +142,7 @@ a:hover {
 
 .listings .item.active .title,
 .listings .item .title:hover {
-  color: #8cc63f; }
+  color: #000000; }
 
 .listings .item.active {
   background-color: #f8f8f8; }
@@ -160,11 +160,12 @@ a:hover {
   background: #00853e;
   border-radius: 0; }
 
-.marker {
+.markercp {
   border: none;
   cursor: pointer;
   height: 56px;
   width: 56px;
+  background-image: url(../images/cpmarker.png);
   background-color: rgba(0, 0, 0, 0); }
 
 .clearfix {
@@ -181,7 +182,7 @@ a:hover {
   display: flex;
   position: relative;
   width: 100%;
-  height: 80vh; }
+  height: 85vh; }
 
 .hide {
   visibility: hidden; }
