--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -13,7 +13,7 @@
         <div class="dropdown-menu">
           <a class="dropdown-item" href="/page-personal">Profile</a>
           <a class="dropdown-item" href="/favourites">Favourites</a>
-          <a class="dropdown-item" href="/reservates">Reservates</a>
+          <a class="dropdown-item" href="/bookings">Bookings</a>
           <a class="dropdown-item" href="/info">Change info</a>
           <div role="separator" class="dropdown-divider"></div>
           <a class="dropdown-item" href="/logout">Logout</a>
@@ -23,9 +23,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/login">Login</a>
       </li>
-      <li class="nav-item">
+      {{!-- <li class="nav-item">
         <a class="nav-link" href="/register">Register</a>
-      </li>
+      </li> --}}
       <li class="nav-item">
         <a class="nav-link" href="/about">About</a>
       </li>
