--- a/views/passport/favourites.hbs
+++ b/views/passport/favourites.hbs
@@ -1,6 +1,6 @@
 <div>
   <div class="title-info">
-    <h2>This are the current favourites</h2>
+    <h2>These are your current favourites clean points</h2>
   </div>
   <div>
     <form method="POST" action="/favourites">
