--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -567,3 +567,39 @@ h5 {
   width: 80%;
   margin: 3% auto;
 }
+
+.textArea {
+  margin-bottom: 10%;
+  display: block;
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #f2f2f2;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.textObservation {
+  word-wrap: break-word;
+}
+
+.titleObservation {
+  display: flex;
+  justify-content: center;
+}
+.text {
+  margin: 3%;
+  margin-bottom: 7%;
+  text-align: center;
+}
+
+.buttonReservates {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 5%;
+}
