--- a/views/passport/page-personal.hbs
+++ b/views/passport/page-personal.hbs
@@ -1,5 +1,5 @@
 <div>
-  <div class="title-info ">
+  <div class="title-info colorVerde">
     <h2>Welcome {{user.name}}</h2>
   </div>
   <div class="row">
