--- a/views/passport/bookings.hbs
+++ b/views/passport/bookings.hbs
@@ -40,7 +40,7 @@
           </div>
           {{/if}}
           <div class="buttonReservates">
-            <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Delete</button>
+            <button class="btn btn-outline-dark my-2 my-sm-0 boton" type="submit">Delete</button>
           </div>
         </form>
       </div>
