--- a/views/passport/register.hbs
+++ b/views/passport/register.hbs
@@ -1,5 +1,5 @@
 <div>
-  <img style=" position:absolute; width:100%; height:125%;" src="../images/register.jpg" />
+  <img style=" position:absolute; width:100%; height:125%;" src="../images/register1.jpg" />
   <div class="login-page">
     <div class="form">
       <form method="POST" class="login-form">
