--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -537,4 +537,9 @@ h5 {
 .boton {
   margin-left: 0px; }
 
+.errorText {
+  text-align: center;
+  color: red;
+  font-size: large; }
+
 /*# sourceMappingURL=style.css.map */
