--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -609,6 +609,10 @@ h5 {
 .colorVerde {
   color: #76b852;
 }
+
+.fondoVerde {
+  background-color: #04271d;
+}
 .botonVerde {
   border: 1px solid #76b852;
   color: #76b852;
@@ -622,8 +626,21 @@ h5 {
   margin-left: 0px;
 }
 
-.errorText{
+.errorText {
   text-align: center;
   color: red;
   font-size: large;
+}
+
+.cardPersonal {
+  align-items: center;
+  background-color: #04271d;
+}
+
+.prueba {
+  color: #76b852;
+  display: flex;
+  justify-content: center;
+  margin: 3%;
+  padding: 1%;
 }
