--- a/views/passport/page-personal.hbs
+++ b/views/passport/page-personal.hbs
@@ -1,6 +1,6 @@
 <div>
   <div class="prueba">
-    <h2>Hellow {{user.name}}, what do you need to recycle</h2>
+    <h2>Hellow {{user.name}}, what are you looking for!!</h2>
   </div>
   <div class="row">
     <div class="col-sm-6">
@@ -32,6 +32,14 @@
         <img style="width:50%; height:50%;" src="../images/cpoint.jpg" />
         <div class="card-body fondoVerde">
           <a href="/page-personal/cleanPoints" class="btn btn-outline-dark my-2 my-sm-0 botonVerde">R.Points</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="card cardPersonal">
+        <img style="width:50%; height:50%;" src="../images/formulary.jpg" />
+        <div class="card-body fondoVerde">
+          <a href="/bookings" class="btn btn-outline-dark my-2 my-sm-0 botonVerde">Furnitures</a>
         </div>
       </div>
     </div>
