--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,17 @@
-{{!-- <p>Welcome to {{title}}</p> --}}
+<section id="photo">
+  <div class="middle">
+    <div class="inner">
+      <h1>Trow My Trash: <span>A website to know where<br />
+          do you throw everything! </span></h1>
+      <ul class="actions">
+        <li><a href="/register" class="btn btn-outline-light">Register now</a></li>
+      </ul>
+    </div>
+  </div>
+</section>
 
-<div class="loading">
+
+{{!-- <div class="loading">
   <div class="lds-roller">
     <div></div>
     <div></div>
@@ -14,6 +25,6 @@
 </div>
 <div class="wrapper">
   <div id='map' class='mapindex'></div>
-</div>
+</div> --}}
 
-<script src="/javascripts/maptrash.js"></script>
+{{!-- <script src="/javascripts/maptrash.js"></script> --}}
